# Multi-Agent-Ops-Copilot-with-Governance

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  llm.py  llm_rate_limit.py  main.py  telemetry.py
app/agents/: __init__.py  base.py  executor.py  planner.py  reviewer.py
app/data/corpus/: 01_pr_guidelines.md  02_commit_style.md  03_jira_workflow.md  04_security_policy.md  05_oncall_playbook.md
app/evaluation/: __init__.py  harness.py
app/evaluation/scenarios/: SAMPLE_SCENARIOS.yaml
app/governance/: __init__.py  approvals.py  audit.py  costs.py  policies.py
app/integrations/: github_real.py  jira_real.py
app/metrics/: api.py  llm_usage.py
app/rag/: __init__.py  defenses.py  indexer.py  retriever.py
app/schemas/: __init__.py  core.py
app/tests/: test_agents.py  test_defenses.py  test_policies.py  test_rag.py
app/tools/: __init__.py  github_client.py  jira_client.py  sandbox_repo.py
infra/: Dockerfile
providers/: __init__.py  azure_openai_provider.py  base.py  openai_provider.py
scripts/: export_metrics.py  generate_scenarios.py  run_benchmarks.py  seed_demo.py
web/: package-lock.json  package.json  tsconfig.json
web/app/: layout.tsx  page.tsx
web/app/api/proxy/[...path]/: route.ts
web/components/: ApprovalQueue.tsx  MetricsCard.tsx  RunsTable.tsx  TaskForm.tsx
web/lib/: client.ts  types.ts
